[tool.poetry]
name = "datapro"
version = "0.1.0"
description = ""
authors = ["Sidnei Pacheco <linksilva26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
